--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,112 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@include mat.core();
+
+$painel-log-agiliza-primary: mat.define-palette(mat.$indigo-palette);
+$painel-log-agiliza-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$painel-log-agiliza-warn: mat.define-palette(mat.$red-palette);
+
+$painel-log-agiliza-theme: mat.define-light-theme((
+  color: (
+    primary: $painel-log-agiliza-primary,
+    accent: $painel-log-agiliza-accent,
+    warn: $painel-log-agiliza-warn,
+  )
+));
+
+@include mat.all-component-themes($painel-log-agiliza-theme);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "./assets/styles/cores.scss";
+
+// Fontes CAIXA
+
+@font-face {
+  font-family: "Caixa Bd";
+  src: url("./assets/fonts/CAIXAStd-Bold.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Bd Italic";
+  src: url("./assets/fonts/CAIXAStd-BoldItalic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Bk";
+  src: url("./assets/fonts/CAIXAStd-Book.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Bk Italic";
+  src: url("./assets/fonts/CAIXAStd-BookItalic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Ex Bd";
+  src: url("./assets/fonts/CAIXAStd-ExtraBold.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Ex Bd Italic";
+  src: url("./assets/fonts/CAIXAStd-ExtraBoldItalic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Italic";
+  src: url("./assets/fonts/CAIXAStd-Italic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Lt";
+  src: url("./assets/fonts/CAIXAStd-Light.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Lt Italic";
+  src: url("./assets/fonts/CAIXAStd-LightItalic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Regular";
+  src: url("./assets/fonts/CAIXAStd-Regular.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Sm Bd";
+  src: url("./assets/fonts/CAIXAStd-SemiBold.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Caixa Sb Italic";
+  src: url("./assets/fonts/CAIXAStd-SemiBoldItalic.woff") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
+.lista-menu .mat-mdc-list-item {
+  -webkit-tap-highlight-color: transparent;
+}
