refator: ajustes nomenclatura do APP e ambientes a serem roteados

--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -7,8 +7,8 @@
     </div>
     <img style="align-self: center;" height="18px" [src]="logoCaixaBranco" alt="CAIXA">
     <mat-divider [vertical]="true" class="divider"></mat-divider>
-    <span class="gestao-aplicacao">CEOPE RE</span>
-    <span class="nome-aplicacao">Painel Inovação</span>
+    <span class="gestao-aplicacao">{{ administracaoApp }}</span>
+    <span class="nome-aplicacao">{{ tituloAppHeader }}</span>
   </div>
   <div class="spacer"></div>
   <div class="conteiner-usuario">
