--- a/src/app/features/galeria/galeria.component.html
+++ b/src/app/features/galeria/galeria.component.html
@@ -1,3 +1,31 @@
-<p>
-  galeria works!
-</p>
+<div class="row g-0 conteiner-titulo">
+  <p>Galeria</p>
+  <!-- <div class="col">
+    <div class="conteiner-texto">
+
+      <div style="width: 500px;">
+        <div class="div-usuario">
+          <img class="img-perfil" [src]="urlFoto">
+          <span class="texto-usuario">Olá, Bruno</span>
+        </div>
+        <div class="div-titulo">
+          <span class="titulo">Bem Vindo(a)</span><br>
+          <span class="titulo-painel">Ao Painel Inovação!</span>
+        </div>
+        <p class="texto">Proceda a análise da conformidade com a Agiliza, uma aplicação intuitiva, que reúne num único lugar dados e funcionalidades que permitem aumentar sua produtividade com segurança.</p>
+        <div class="div-btn">
+          <button class="btn_aux-dest" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp;
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- <div class="col" >
+    <div class="div-img">
+      <div class="img">
+        <img style="align-self: center;" height="400px" [src]="imgInovacao" alt="CAIXA">
+      </div>
+    </div>
+  </div> -->
+
+</div>
