--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="row g-0 conteiner-titulo">
+  <p>HOME</p>
 
-  <div class="col">
+  <!-- <div class="col">
     <div class="conteiner-texto">
 
       <div style="width: 500px;">
@@ -18,14 +19,14 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="col" >
+  <!-- <div class="col" >
     <div class="div-img">
       <div class="img">
-        <!-- <img style="align-self: center;" height="400px" [src]="imgInovacao" alt="CAIXA"> -->
+        <img style="align-self: center;" height="400px" [src]="imgInovacao" alt="CAIXA">
       </div>
     </div>
-  </div>
+  </div> -->
 
 </div>
