--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,20 +1,20 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
-$painel-log-agiliza-primary: mat.define-palette(mat.$indigo-palette);
-$painel-log-agiliza-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$painel-primary: mat.define-palette(mat.$indigo-palette);
+$painel-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-$painel-log-agiliza-warn: mat.define-palette(mat.$red-palette);
+$painel-warn: mat.define-palette(mat.$red-palette);
 
-$painel-log-agiliza-theme: mat.define-light-theme((
+$painel-theme: mat.define-light-theme((
   color: (
-    primary: $painel-log-agiliza-primary,
-    accent: $painel-log-agiliza-accent,
-    warn: $painel-log-agiliza-warn,
+    primary: $painel-primary,
+    accent: $painel-accent,
+    warn: $painel-warn,
   )
 ));
 
-@include mat.all-component-themes($painel-log-agiliza-theme);
+@include mat.all-component-themes($painel-theme);
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
