feat(galeria): criando store, serviço e funções para carga de dados da galeria

--- a/src/app/features/galeria/galeria.component.html
+++ b/src/app/features/galeria/galeria.component.html
@@ -1,5 +1,9 @@
 <div class="row g-0 conteiner-titulo">
+
   <p>Galeria</p>
+  @for (titulo of galeria(); track $index) {
+    <p>{{titulo.id}}</p>
+  }
   <!-- <div class="col">
     <div class="conteiner-texto">
 
