--- a/src/app/features/galeria/galeria.component.scss
+++ b/src/app/features/galeria/galeria.component.scss
@@ -5,3 +5,10 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   height: 90%;
 }
+
+
+.card-titulo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
