--- a/src/app/features/galeria/galeria.component.html
+++ b/src/app/features/galeria/galeria.component.html
@@ -6,7 +6,7 @@
         (keyup)="atualizaFiltroTextoInput()"
         (change)="atualizaFiltroTextoInput()"
         matInput class="input-pesquisa"
-        placeholder="Pesquise..."
+        placeholder="Pesquise aqui..."
         style="font-family: Futura Bk BT; font-size: 16px; font-weight: 400; line-height: 22px; letter-spacing: 0em; color: #3a4859 !important;">
         <button *ngIf="textoInput" matSuffix mat-icon-button aria-label="Clear" (click)="limparInput()" class="btn-limpar">
           <mat-icon class="limpar">close</mat-icon>
