--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -12,7 +12,8 @@
         </div>
         <p class="texto">Aqui é uma galeria muito especial, <b>explore tudo que puder!</b></p>
         <div class="div-btn">
-          <button class="btn_aux-dest" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp;
+          <!-- <button class="btn_aux-dest" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp; -->
+          <button class="btn_primary" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp;
         </div>
       </div>
     </div>
