--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,3 +1,7 @@
+
+$fonte: "Futura Md BT", serif;
+$tamanho: 16px;
+
 .conteiner-titulo {
   border-radius: 30px 30px 30px 30px;
   background-color:#F9FBFB;
@@ -67,4 +71,19 @@
   justify-content: center;
   align-items: center;
   margin-top: 10%;
+}
+
+.btn_primary{
+  background-color: #F59200!important;
+  color: #FFF!important;
+  font-family: $fonte;
+  font-size: $tamanho;
+  letter-spacing: normal;
+}
+
+.btn_primary:hover{
+  background-color: #FFA829!important;
+  font-family: $fonte;
+  font-size: $tamanho;
+  letter-spacing: normal;
 }
