--- a/src/app/features/galeria/galeria.component.scss
+++ b/src/app/features/galeria/galeria.component.scss
@@ -4,7 +4,10 @@
   border: 2px solid #d0e0e3;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   align-items: center;
-  // height: 90%;
+  min-height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card-titulo {
