--- a/src/app/features/galeria/galeria.component.scss
+++ b/src/app/features/galeria/galeria.component.scss
@@ -26,16 +26,28 @@
 
 .btn-limpar {
   padding: 0px;
-  margin-top: -16px;
-  width: 36px;
-  height: 36px;
-  margin-right: 3px;
+  /* margin-top: -16px; */
+  /* width: 36px; */
+  /* height: 36px; */
+  margin-right: 10px;
+  border-width: 1px;
 }
 
 .limpar{
   padding: 0;
+  font-size: medium;
+  margin-top: 6px;
+  color: #3a4859;
 }
 
 ::ng-deep .btn-limpar.mat-mdc-icon-button.mat-mdc-button-base {
   padding-top: 0px;
+}
+
+.button-container {
+  text-align: center;
+}
+
+.setas-paginacao {
+  font-weight: bold;
 }
