refator(galeria): ajuste texto de boas vindas oculto

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -15,6 +15,7 @@
           <!-- <button class="btn_aux-dest" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp; -->
           <button class="btn_primary" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp;
         </div>
+        <p [style]="exibirFraseParaSideNavAberto() ? 'display:block' : 'display:none'" class="texto mt-4">Vamos lá... <b>Selecione a galeria disponível no menu ao lado!</b></p>
       </div>
     </div>
 </div>
