style: ajustes gerais de responsividade

--- a/src/app/core/layout/components/sidenav/sidenav.component.scss
+++ b/src/app/core/layout/components/sidenav/sidenav.component.scss
@@ -73,3 +73,10 @@ mat-drawer-content {
   -webkit-tap-highlight-color: #c6e5ff;
   background-color: #c6e5ff;
 }
+
+// @media screen and (max-width: 984px) {
+
+//   .default-container {
+//     display: none;
+//   }
+// }
