--- a/src/app/features/galeria/galeria.component.html
+++ b/src/app/features/galeria/galeria.component.html
@@ -1,5 +1,8 @@
 <div class="row g-0 filtro-titulos mb-3">
-  <div class="col">
+  <div class="col-12 col-md-6 col-xl-8 col-xxl-10" style="place-self: center;">
+    <span class="titulo-painel">Galeria de Títulos</span>
+  </div>
+  <div class="col-12 col-md-6 col-xl-4 col-xxl-2">
     <mat-form-field appearance="outline" class="form-pesquisa" mat-elevation-z5>
       <input
         [(ngModel)]="textoInput"
