--- a/src/app/shared/components/card-titulo/card-titulo.component.html
+++ b/src/app/shared/components/card-titulo/card-titulo.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <img mat-card-image [src]="titulo.thumbnailUrl">
     <mat-card-content>
-      <p>{{ nomeTitulo }}</p>
+      <p class="texto-descricao">{{ nomeTitulo }}</p>
     </mat-card-content>
   </mat-card>
 </div>
