--- a/src/app/core/layout/components/header/header.component.scss
+++ b/src/app/core/layout/components/header/header.component.scss
@@ -46,11 +46,6 @@
   // opacity: 48%;
 }
 
-//   .icone-container:active{
-//     background-color: transparent ;
-//     border: 1px solid rgba(241, 249, 255, 0.4);
-// }
-
 .toolbar .icone-caixa {
   margin-inline: 8px;
   height: 16px;
@@ -84,96 +79,26 @@
   letter-spacing: 0em;
 }
 
-.nome-usuario, .nome-classificacao, .primeitoNome-usuario {
-  font-family: "Futura Md";
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 0em;
-}
-
-.divider-nome-usuario{
-  width: 1px;
-  height: 18px;
-  // border: 1px solid $cinza-lighter-2;
-  border: 1px solid #ffffff;
-  border-radius: 50px;
-  // background-color: $cinza-lighter-2;
-  background-color: #ffffff;
-  margin-inline: 12px;
-}
-
-.toolbar .conteiner-usuario{
-  display: flex;
-  align-items: center;
-  align-content: center;
-  flex-wrap: nowrap;
-  height: 48px;
-}
-
 .spacer {
   flex: 1;
 }
 
-.title-menu-user{
-  font-size: 16px;
-  font-family: "Futura Md BT";
-}
-
-.text-content{
-  font-family: 'Futura Md BT';
-  font-size: 12px;
-  // color: $cinza-lighter-2;
-  color: #ffffff;
-  margin-left: 28px;
-  margin-right: 5px;
-  vertical-align: middle;
-}
-
-.text-classification{
-  font-family: 'Futura Md';
-  font-size: 12px;
-  // color: $cinza-lighter-2;
-  color: #ffffff;
-  text-transform: uppercase;
-  vertical-align: middle;
-}
-
-.primeitoNome-usuario {
-  display: none;
-}
-
-.loader{
-  width: 22px !important;
-  height: 24px !important;
-  --mdc-circular-progress-active-indicator-color: #ffffff;
-}
 
 @media screen and (max-width: 984px) {
 
-  .primeitoNome-usuario {
-    display: block;
-  }
-
-  .nome-usuario {
+  .gestao-aplicacao {
     display: none;
   }
+
 }
 
 @media screen and (max-width: 730px) {
 
-  .primeitoNome-usuario {
+  .nome-aplicacao {
     display: none;
   }
 
-  .nome-usuario {
-    display: none;
-  }
-
-  .divider-nome-usuario{
-    display: none;
-  }
-
-  .nome-classificacao{
+  .gestao-aplicacao {
     display: none;
   }
 }
