--- a/src/app/shared/components/card-titulo/card-titulo.component.scss
+++ b/src/app/shared/components/card-titulo/card-titulo.component.scss
@@ -2,6 +2,7 @@
 
 .titulo-card {
   max-width: 150px;
+  height: 350px;
   margin: 2em;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
   border-radius: 15px;
@@ -10,4 +11,8 @@
 .titulo-card .mat-card-image {
   max-height: 150px;
   object-fit: cover;
+}
+
+.texto-descricao {
+  word-break: break-all;
 }
