style(responsividade): ajuste para responsividade das telas em celulares

--- a/src/app/core/layout/components/header/header.component.html
+++ b/src/app/core/layout/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar">
   <div class="informacao-projeto">
     <div class="icone-container">
-      <button mat-icon-button class="botao-menu" (click)="expandirSideNav()">
+      <button mat-icon-button class="botao-menu" (click)="alternarSideNav()">
         <mat-icon style="border-radius: 10px; margin-bottom: 1px;">menu</mat-icon>
       </button>
     </div>
