--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="div-titulo-central">
           <span class="titulo-painel">ao Espaço TEIA!</span>
         </div>
-        <p class="texto">Aqui é uma galeria muito especial, <b>explore tudo que puder!</b></p>
+        <p class="texto mx-6">Aqui é uma galeria muito especial, <b>explore tudo que puder!</b></p>
         <div class="div-btn">
           <!-- <button class="btn_aux-dest" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp; -->
           <button class="btn_primary" mat-flat-button (click)="expandirSideNav()">Vamos Começar!</button>&nbsp;
